make manifest.yml compliant

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "keywords": [
     "commandbar",
     "commandbar-plugin",
-    "netlify"
+    "netlify",
+    "netlify-plugin"
   ],
   "author": "Foobar, Inc.",
   "license": "MIT",
