--- a/manifest.yml
+++ b/manifest.yml
@@ -3,3 +3,7 @@ inputs:
   - name: orgId
     required: true
     description: Your Organization ID
+  - name: linkCommands
+    required: false
+    description: A list of command labels and urls which will generate CommandBar Link Commands
+    default: []
